--- a/LBProfiler/app/build.gradle
+++ b/LBProfiler/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+    compile 'com.google.android.gms:play-services-appinvite:10.0.1'
 }
 
 
