Profile Modification Page

--- a/LBProfiler/app/src/main/AndroidManifest.xml
+++ b/LBProfiler/app/src/main/AndroidManifest.xml
@@ -67,7 +67,8 @@
             android:name=".FetchAddressIntentService"
             android:exported="false" />
 
-        <activity android:name=".ProfileCreation"></activity>
+        <activity android:name=".ProfileCreation" />
+        <activity android:name=".ProfileModification"></activity>
     </application>
 
 </manifest>
