--- a/LBProfiler/app/src/main/AndroidManifest.xml
+++ b/LBProfiler/app/src/main/AndroidManifest.xml
@@ -55,6 +55,7 @@
              sign the APK for publishing.
              You can define the keys for the debug and release targets in src/debug/ and src/release/. 
         -->
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
@@ -68,7 +69,9 @@
             android:exported="false" />
 
         <activity android:name=".ProfileCreation" />
-        <activity android:name=".ProfileModification"></activity>
+        <activity android:name=".ProfileModification" />
+        <activity android:name=".Feedback"
+            ></activity>
     </application>
 
 </manifest>
