--- a/LBProfiler/app/build.gradle
+++ b/LBProfiler/app/build.gradle
@@ -31,12 +31,19 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:10.0.1'
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.google.firebase:firebase-storage:10.0.1'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.google.android.gms:play-services-appinvite:10.0.1'
     compile 'com.google.android.gms:play-services-maps:10.0.1'
     compile 'com.google.android.gms:play-services-location:10.0.1'
+    compile 'com.jakewharton:butterknife:8.4.0'
+    compile 'com.github.florent37:viewanimator:1.0.5'
+    compile 'com.intuit.sdp:sdp-android:1.0.4'
+    compile 'com.jakewharton:butterknife-compiler:8.4.0'
+
     testCompile 'junit:junit:4.12'
 }
+
 
 
 
