--- a/LBProfiler/app/build.gradle
+++ b/LBProfiler/app/build.gradle
@@ -40,17 +40,11 @@ dependencies {
     compile 'com.github.florent37:viewanimator:1.0.5'
     compile 'com.intuit.sdp:sdp-android:1.0.4'
     compile 'com.jakewharton:butterknife-compiler:8.4.0'
+    compile 'com.google.code.gson:gson:2.2.+'
+    compile files('libs/gson-2.2.4.jar')
 
     testCompile 'junit:junit:4.12'
 }
-
-
-
-
-
-
-
-
 
 
 apply plugin: 'com.google.gms.google-services'
