--- a/LBProfiler/app/build.gradle
+++ b/LBProfiler/app/build.gradle
@@ -41,7 +41,9 @@ dependencies {
     compile 'com.intuit.sdp:sdp-android:1.0.4'
     compile 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'com.google.code.gson:gson:2.2.+'
-    compile files('libs/gson-2.2.4.jar')
+
+
+    compile 'com.firebase:geofire-android:2.1.1'
 
     testCompile 'junit:junit:4.12'
 }
