modify profile settings

--- a/LBProfiler/app/src/main/AndroidManifest.xml
+++ b/LBProfiler/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="trainedge.lbprofiler">
 
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -10,8 +9,6 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
-
 
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
@@ -72,7 +69,6 @@
         <activity
             android:name=".PlaceSelectionActivity"
             android:label="@string/title_activity_place_selection" />
-
         <activity android:name=".ProfileCreation" />
         <activity android:name=".ProfileModification" />
         <activity android:name=".Feedback" />
@@ -81,11 +77,15 @@
         <service
             android:name=".services.FetchAddressIntentService"
             android:exported="false" />
-
         <service
             android:name=".services.GeofenceService"
             android:enabled="true"
             android:exported="true" />
+
+        <activity
+            android:name=".ViewProfileActivity"
+            android:label="@string/title_activity_view_profile"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
