--- a/LBProfiler/app/build.gradle
+++ b/LBProfiler/app/build.gradle
@@ -25,6 +25,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+
+
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.1.1'
@@ -40,13 +42,12 @@ dependencies {
     compile 'com.github.florent37:viewanimator:1.0.5'
     compile 'com.intuit.sdp:sdp-android:1.0.4'
     compile 'com.jakewharton:butterknife-compiler:8.4.0'
-    compile 'com.google.code.gson:gson:2.2.+'
-
-
+    compile 'com.google.code.gson:gson:2.2.4'
+    compile 'jp.wasabeef:recyclerview-animators:2.2.0'
     compile 'com.firebase:geofire-android:2.1.1'
-
     testCompile 'junit:junit:4.12'
 }
+
 
 
 apply plugin: 'com.google.gms.google-services'
