--- a/LBProfiler/app/src/main/AndroidManifest.xml
+++ b/LBProfiler/app/src/main/AndroidManifest.xml
@@ -59,12 +59,15 @@
              Note that the API key is linked to the encryption key used to sign the APK.
              You need a different API key for each encryption key, including the release key that is used to
              sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
+             You can define the keys for the debug and release targets in src/debug/ and src/release/.
         -->
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
 
         <activity
             android:name=".PlaceSelectionActivity"
@@ -85,7 +88,13 @@
         <activity
             android:name=".ViewProfileActivity"
             android:label="@string/title_activity_view_profile"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
+
+        <receiver
+            android:name=".services.Timerservice"
+            android:process=":remote" />
+
+        <activity android:name=".AlertActivity"></activity>
     </application>
 
 </manifest>
